--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,15 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+MAIL_DRIVER=smtp
+MAIL_HOST=mail.example.com
+MAIL_PORT=25
+MAIL_USERNAME=username
+MAIL_PASSWORD=password
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=username@example.com
+MAIL_FROM_NAME="Notificaciones Example"
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
